M doc/java.sh